Fixed shortened link on mobile

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -255,7 +255,8 @@ form button{
 .links--container a{
     color: var(--primary-cyan);
     font-weight: 700;
-    max-width: 90%;
+    word-break: break-word;
+    text-align: left;
 }
 
 .links--container button{
